# Excelsior

./: .env  .env.test  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
src/database/: connection.rs
src/domain/: general.rs  mod.rs
src/domain/tests/: general_test.rs  mod.rs
src/handlers/: mod.rs  simple_handler.rs
src/handlers/tests/: mod.rs  simple_handler_test.rs
src/routes/: mod.rs
src/utils/: main_utils.rs  mod.rs  un_utils.rs
src/utils/tests/: mod.rs  otel_config_test.rs  un_utils_test.rs
tests/: integration_test.rs
