[package]
name = "excelsior"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["trace", "compression-full", "limit", "timeout"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.19", features = ["json"] }
#http = "1.3.1"

##OpenTelemetry
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "logs", "grpc-tonic"] }
tracing-opentelemetry = "0.28"
anyhow = "1.0.100"


[dev-dependencies]
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
serial_test = "3.2"
