[package]
name = "excelsior"
version = "2.1.0"
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.8" }
tower-http = { version = "0.6.8", features = ["trace", "compression-full", "limit", "timeout"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12.19", features = ["json"] }
http = "1.3.1"
serial_test = "3.3.1"

[dev-dependencies]
axum = { version = "0.8.8" }
tokio = { version = "1.0", features = ["full", "test-util"] }
